<resources>
    <string name="app_name">ToyProject</string>

    <string name="description">Description</string>
    <string name="language">Language</string>
    <string name="follower">follower : </string>
    <string name="following">following : </string>
    <string name="max_follow_number">99+</string>
    <string name="unknown">Unknown</string>
    <string name="search_repository">Search Repository</string>
    <string name="please_write_repository_name">"please write repository name"</string>
    <string name="unexpected_error">Unexpected Error</string>
    <string name="no_description_provided">No description provided</string>
    <string name="no_search_result">No search result.</string>
    <string name="no_language_specified">No language specified</string>
    <string name="blackjin_toy_project">BlackJin Toy Project ~!</string>
    <string name="search">Search</string>
</resources>
