<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="android.text.TextUtils" />

        <variable
            name="model"
            type="com.example.toyproject.ui.search.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray9"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtTitle"
            style="@style/TextStyle.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blackjin_toy_project"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etSearch"
            style="@style/EditTextStyle.NormalInputField"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:hint="@string/please_write_repository_name"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:text="@={model.editSearchText}"
            app:layout_constraintEnd_toStartOf="@+id/btnSearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSearch"
            style="@style/ButtonStyle.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="@{model.enableSearchButton}"
            android:onClick="@{(v) -> model.searchRepository(v.getContext(), model.editSearchText.toString())}"
            android:text="@string/search"
            app:layout_constraintBottom_toBottomOf="@+id/etSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/etSearch"
            app:layout_constraintTop_toTopOf="@+id/etSearch" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listSearchRepository"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSearch" />

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{model.isLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSearch"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvMessage"
            style="@style/TextStyle.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.errorMessage}"
            android:visibility="@{TextUtils.isEmpty(model.errorMessage) ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSearch"
            tools:text="message"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>