<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingTop="12dp"
    android:paddingRight="8dp"
    android:paddingBottom="12dp"
    tools:context=".ui.DetailFragment">

    <LinearLayout
        android:id="@+id/lytContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="?android:listDivider"
        android:orientation="vertical"
        android:showDividers="middle">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                tools:src="@drawable/ic_launcher_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_toEndOf="@+id/ivProfile"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitle"
                    style="@style/TextStyle.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:maxLines="2"
                    tools:text="username/myrepository" />

                <TextView
                    android:id="@+id/tvStars"
                    style="@style/TextStyle.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_star_black"
                    tools:text="100 Stars" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyle.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/follower" />

            <TextView
                android:id="@+id/tvFollower"
                style="@style/TextStyle.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                tools:text="100" />

            <TextView
                style="@style/TextStyle.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/following" />

            <TextView
                android:id="@+id/tvFollowing"
                style="@style/TextStyle.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="100" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">

            <ImageView
                android:id="@+id/ivDescription"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_description_black"
                android:tint="@color/gray1" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="My Description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDescription"
                android:layout_marginStart="60dp"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">

            <ImageView
                android:id="@+id/ivLanguage"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_language_black"
                android:tint="@color/gray1" />

            <TextView
                android:id="@+id/tvLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="Kotlin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLanguage"
                android:layout_marginStart="60dp"
                android:text="@string/language"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvMessage"
        style="@style/TextStyle.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:text="message"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible" />

</RelativeLayout>